<resources>
    <string name="app_name">Basic Intent</string>
    <string name="hello_world">Hello World!</string>
    <string name="text_move_activity">Move Activity</string>
    <string name="text_send_data_to_activity">Move With Data to Activity</string>
    <string name="text_move_with_object_to_activity">Move With Object to Activity</string>
    <string name="text_implicit_intent">Implicit Intent</string>
    <string name="text_dial_number">Dial a Number</string>
    <string name="text_pick_an_image">Pick an Image</string>
    <string name="text_open_url">Open URL</string>
    <string name="text_open_camera">Open Camera</string>
    <string name="text_submit_result">Submit Result</string>
    <string name="text_move_for_result">Move for Result</string>
    <string name="text_please_input_some_value">Please input some value</string>
</resources>