<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImplicitIntentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnOpenDialNumber"
            style="@style/MyCustomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_dial_number" />

        <Button
            android:id="@+id/btnOpenUrl"
            style="@style/MyCustomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_open_url" />

        <Button
            android:id="@+id/btnPickImage"
            style="@style/MyCustomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_pick_an_image" />

        <Button
            android:id="@+id/btnOpenCamera"
            style="@style/MyCustomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_open_camera" />

        <ImageView
            android:id="@+id/ivImageResult"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:adjustViewBounds="true"
            android:layout_margin="5dp"
            android:contentDescription="@string/app_name" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>